--- a/src/index.html
+++ b/src/index.html
@@ -30,99 +30,142 @@
 			</div>
 		</div>
 		<div class="content">
-			<h3 class="content__title">Make Way for new perspectives</h3>
+			<h3 class="content__title">Making Way for new perspectives</h3>
 			<div class="grid grid--narrow" data-duration="1" data-ease="elastic.out(0.5)" data-scale="3" data-max-rotation="20" data-spread="150" data-max-distance="700">
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/13.jpg)"></div>
-				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/14.jpg)"></div>
-				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/15.jpg)"></div>
-				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/16.jpg)"></div>
-				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/17.jpg)"></div>
-				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/18.jpg)"></div>
-				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/19.jpg)"></div>
-				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/20.jpg)"></div>
-				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/21.jpg)"></div>
-				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/22.jpg)"></div>
-				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/23.jpg)"></div>
-				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/24.jpg)"></div>
-				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/25.jpg)"></div>
-				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/26.jpg)"></div>
-				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/27.jpg)"></div>
-				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/28.jpg)"></div>
-				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/29.jpg)"></div>
-				</div>
-				<div class="grid__item">
+				<div class="grid__item"><p>1 july 2023 ↗</p>
 					<div class="grid__item-img" style="background-image:url(img/1.jpg)"></div>
 				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/31.jpg)"></div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/2.jpg)"></div>
 				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/32.jpg)"></div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/3.jpg)"></div>
 				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/33.jpg)"></div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/4.jpg)"></div>
 				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/34.jpg)"></div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/5.jpg)"></div>
 				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/35.jpg)"></div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/6.jpg)"></div>
 				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/36.jpg)"></div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/7.jpg)"></div>
 				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/37.jpg)"></div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/8.jpg)"></div>
 				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/38.jpg)"></div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/9.jpg)"></div>
 				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/39.jpg)"></div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/10.jpg)"></div>
 				</div>
-				<div class="grid__item">
-					<div class="grid__item-img" style="background-image:url(img/40.jpg)"></div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/11.jpg)"></div>
 				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/12.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/13.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/14.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/15.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/16.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/1.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/2.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/3.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/4.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/5.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/6.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/7.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/8.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/9.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/10.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/11.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/12.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/13.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/14.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/15.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/16.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/1.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/2.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/3.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/4.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/5.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/6.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/7.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/8.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/9.jpg)"></div>
+				</div>
+				<div class="grid__item"><p>1 july 2023 ↗</p>
+					<div class="grid__item-img" style="background-image:url(img/10.jpg)"></div>
+				</div>
+				
 			</div>
 		</div>
 		<div class="frame frame--footer">
 			<div class="frame__author">
 				<a href="https://brandnewguys.co">Sign up for our newsletter</a>
 			</div>
-			<div class="frame__info">What we belief. <a href="https://brandnewguys.co">What we can proof</a></div>
+			<div class="frame__info">What we belief vs <a href="https://brandnewguys.co">What we can proof</a></div>
 			<div class="frame__credits">by <a href="https://brandnewguys.co">Brand New Guys</a></div>
 		</div>
 	</main>
