--- a/src/index.html
+++ b/src/index.html
@@ -32,130 +32,130 @@
 		<div class="content">
 			<h3 class="content__title">Making Way for new perspectives</h3>
 			<div class="grid grid--narrow" data-duration="1" data-ease="elastic.out(0.5)" data-scale="3" data-max-rotation="20" data-spread="150" data-max-distance="700">
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/1.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/2.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/3.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/4.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/5.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/6.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/7.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/8.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/9.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/10.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/11.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/12.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/13.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/14.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/15.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/16.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/1.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/2.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/3.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/4.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/5.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/6.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/7.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/8.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/9.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/10.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/11.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/12.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/13.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/14.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/15.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/16.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/1.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/2.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/3.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/4.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/5.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/6.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/7.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/8.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/9.jpg)"></div>
 				</div>
-				<div class="grid__item"><p>1 july 2023 ↗</p>
+				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/10.jpg)"></div>
 				</div>
 				
