--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 			</div>
 		</div>
 		<div class="content">
-			<h3 class="content__title">Making Way for new perspectives</h3>
+			<h3 class="content__title"></h3>
 			<div class="grid grid--narrow" data-duration="1" data-ease="elastic.out(0.5)" data-scale="3" data-max-rotation="20" data-spread="150" data-max-distance="700">
 				<div class="grid__item"><p>1 july 2023</p>
 					<div class="grid__item-img" style="background-image:url(img/1.jpg)"></div>
@@ -165,7 +165,7 @@
 			<div class="frame__author">
 				<a href="https://brandnewguys.co">Sign up for our newsletter</a>
 			</div>
-			<div class="frame__info">What we belief vs <a href="https://brandnewguys.co">What we can proof</a></div>
+			<div class="frame__info">Making Way for new perspectives</div>
 			<div class="frame__credits">by <a href="https://brandnewguys.co">Brand New Guys</a></div>
 		</div>
 	</main>
